--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -45,7 +45,7 @@
         "position": "Desarrollador de Software"
     },
     "worksSection": {
-        "title": "Proyectos",
+        "title": "Trabajos",
         "works": [
             {
                 "name": "Gestión de Inventarios y Compras",
@@ -55,17 +55,43 @@
                     "Mejorando significativamente la eficiencia y la transparencia en los procesos de adquisición de la empresa."
                 ],
                 "type": "web",
-                "image": "/screen-projects/shotsnapp-work-one.webp",
+                "image": "https://raw.githubusercontent.com/AletzMan/ImagesStorage/refs/heads/main/portfolio/works/sgi/image_3.webp",
+                "slides": [
+                    "https://raw.githubusercontent.com/AletzMan/ImagesStorage/refs/heads/main/portfolio/works/sgi/image_1.webp",
+                    "https://raw.githubusercontent.com/AletzMan/ImagesStorage/refs/heads/main/portfolio/works/sgi/image_2.webp",
+                    "https://raw.githubusercontent.com/AletzMan/ImagesStorage/refs/heads/main/portfolio/works/sgi/image_3.webp",
+                    "https://raw.githubusercontent.com/AletzMan/ImagesStorage/refs/heads/main/portfolio/works/sgi/image_4.webp",
+                    "https://raw.githubusercontent.com/AletzMan/ImagesStorage/refs/heads/main/portfolio/works/sgi/image_5.webp",
+                    "https://raw.githubusercontent.com/AletzMan/ImagesStorage/refs/heads/main/portfolio/works/sgi/image_6.webp",
+                    "https://raw.githubusercontent.com/AletzMan/ImagesStorage/refs/heads/main/portfolio/works/sgi/image_7.webp",
+                    "https://raw.githubusercontent.com/AletzMan/ImagesStorage/refs/heads/main/portfolio/works/sgi/image_8.webp",
+                    "https://raw.githubusercontent.com/AletzMan/ImagesStorage/refs/heads/main/portfolio/works/sgi/image_9.webp",
+                    "https://raw.githubusercontent.com/AletzMan/ImagesStorage/refs/heads/main/portfolio/works/sgi/image_10.webp",
+                    "https://raw.githubusercontent.com/AletzMan/ImagesStorage/refs/heads/main/portfolio/works/sgi/image_11.webp",
+                    "https://raw.githubusercontent.com/AletzMan/ImagesStorage/refs/heads/main/portfolio/works/sgi/image_12.webp",
+                    "https://raw.githubusercontent.com/AletzMan/ImagesStorage/refs/heads/main/portfolio/works/sgi/image_13.webp",
+                    "https://raw.githubusercontent.com/AletzMan/ImagesStorage/refs/heads/main/portfolio/works/sgi/image_14.webp",
+                    "https://raw.githubusercontent.com/AletzMan/ImagesStorage/refs/heads/main/portfolio/works/sgi/image_15.webp",
+                    "https://raw.githubusercontent.com/AletzMan/ImagesStorage/refs/heads/main/portfolio/works/sgi/image_16.webp",
+                    "https://raw.githubusercontent.com/AletzMan/ImagesStorage/refs/heads/main/portfolio/works/sgi/image_17.webp",
+                    "https://raw.githubusercontent.com/AletzMan/ImagesStorage/refs/heads/main/portfolio/works/sgi/image_18.webp",
+                    "https://raw.githubusercontent.com/AletzMan/ImagesStorage/refs/heads/main/portfolio/works/sgi/image_19.webp",
+                    "https://raw.githubusercontent.com/AletzMan/ImagesStorage/refs/heads/main/portfolio/works/sgi/image_20.webp",
+                    "https://raw.githubusercontent.com/AletzMan/ImagesStorage/refs/heads/main/portfolio/works/sgi/image_21.webp",
+                    "https://raw.githubusercontent.com/AletzMan/ImagesStorage/refs/heads/main/portfolio/works/sgi/image_22.webp",
+                    "https://raw.githubusercontent.com/AletzMan/ImagesStorage/refs/heads/main/portfolio/works/sgi/image_23.webp",
+                    "https://raw.githubusercontent.com/AletzMan/ImagesStorage/refs/heads/main/portfolio/works/sgi/image_24.webp",
+                    "https://raw.githubusercontent.com/AletzMan/ImagesStorage/refs/heads/main/portfolio/works/sgi/image_25.webp",
+                    "https://raw.githubusercontent.com/AletzMan/ImagesStorage/refs/heads/main/portfolio/works/sgi/image_26.webp"
+                ],
                 "technologies": [
                     "next",
-                    "react",
                     "typescript",
                     "sass",
                     "mysql"
                 ],
                 "technologies_names": [
                     "Next",
-                    "React",
                     "TypeScript",
                     "SASS",
                     "MySQL"
@@ -89,6 +115,27 @@
                 ],
                 "type": "desktop",
                 "image": "/screen-projects/FrameTestSequencer.webp",
+                "slides": [
+                    "https://raw.githubusercontent.com/AletzMan/ImagesStorage/refs/heads/main/portfolio/works/sequencer/image_1.webp",
+                    "https://raw.githubusercontent.com/AletzMan/ImagesStorage/refs/heads/main/portfolio/works/sequencer/image_2.webp",
+                    "https://raw.githubusercontent.com/AletzMan/ImagesStorage/refs/heads/main/portfolio/works/sequencer/image_3.webp",
+                    "https://raw.githubusercontent.com/AletzMan/ImagesStorage/refs/heads/main/portfolio/works/sequencer/image_4.webp",
+                    "https://raw.githubusercontent.com/AletzMan/ImagesStorage/refs/heads/main/portfolio/works/sequencer/image_5.webp",
+                    "https://raw.githubusercontent.com/AletzMan/ImagesStorage/refs/heads/main/portfolio/works/sequencer/image_6.webp",
+                    "https://raw.githubusercontent.com/AletzMan/ImagesStorage/refs/heads/main/portfolio/works/sequencer/image_7.webp",
+                    "https://raw.githubusercontent.com/AletzMan/ImagesStorage/refs/heads/main/portfolio/works/sequencer/image_8.webp",
+                    "https://raw.githubusercontent.com/AletzMan/ImagesStorage/refs/heads/main/portfolio/works/sequencer/image_9.webp",
+                    "https://raw.githubusercontent.com/AletzMan/ImagesStorage/refs/heads/main/portfolio/works/sequencer/image_10.webp",
+                    "https://raw.githubusercontent.com/AletzMan/ImagesStorage/refs/heads/main/portfolio/works/sequencer/image_11.webp",
+                    "https://raw.githubusercontent.com/AletzMan/ImagesStorage/refs/heads/main/portfolio/works/sequencer/image_12.webp",
+                    "https://raw.githubusercontent.com/AletzMan/ImagesStorage/refs/heads/main/portfolio/works/sequencer/image_13.webp",
+                    "https://raw.githubusercontent.com/AletzMan/ImagesStorage/refs/heads/main/portfolio/works/sequencer/image_14.webp",
+                    "https://raw.githubusercontent.com/AletzMan/ImagesStorage/refs/heads/main/portfolio/works/sequencer/image_15.webp",
+                    "https://raw.githubusercontent.com/AletzMan/ImagesStorage/refs/heads/main/portfolio/works/sequencer/image_16.webp",
+                    "https://raw.githubusercontent.com/AletzMan/ImagesStorage/refs/heads/main/portfolio/works/sequencer/image_17.webp",
+                    "https://raw.githubusercontent.com/AletzMan/ImagesStorage/refs/heads/main/portfolio/works/sequencer/image_18.webp",
+                    "https://raw.githubusercontent.com/AletzMan/ImagesStorage/refs/heads/main/portfolio/works/sequencer/image_19.webp"
+                ],
                 "technologies": [
                     "csharp",
                     "netcore",
@@ -112,11 +159,47 @@
                     "link": ""
                 }
             }
-        ]
+        ],
+        "buttonClose": "Cerrar"
     },
     "projectsSection": {
         "title": "Proyectos",
         "projects": [
+            {
+                "name": "Code Challenge",
+                "description": [
+                    "Es una aplicación interactiva diseñada para mejorar tus habilidades de programación a través de cuestionarios y retos de algoritmos.",
+                    "Es ideal para preparar entrevistas técnicas, desafiar tus conocimientos y aprender nuevas tecnologías.",
+                    "Este proyecto ganó la Hackathon de Midudev con Vercel. Utilicé el SDK AI de Vercel para crear una experiencia innovadora, y este logro me inspira a seguir mejorando el proyecto."
+                ],
+                "type": "web",
+                "image": "/screen-projects/FrameCodeChallenge.webp",
+                "slides": [
+                    ""
+                ],
+                "technologies": [
+                    "next",
+                    "typescript",
+                    "openai",
+                    "sass"
+                ],
+                "technologies_names": [
+                    "Next",
+                    "TypeScript",
+                    "Open AI",
+                    "SASS"
+                ],
+                "demo": {
+                    "text": "Ver demo",
+                    "title": "Accede a la demo del proyecto",
+                    "link": "https://code-challenge-and-quiz.vercel.app/"
+                },
+                "code": {
+                    "text": "Codigo",
+                    "title": "Acceso al código del proyecto",
+                    "link": "https://github.com/AletzMan/code_challenge_and_quiz"
+                }
+            },
             {
                 "name": "Technolife Shop e-commerce",
                 "description": [
@@ -125,6 +208,9 @@
                 ],
                 "type": "web",
                 "image": "/screen-projects/FrameEcommerce.webp",
+                "slides": [
+                    ""
+                ],
                 "technologies": [
                     "next",
                     "react",
@@ -159,6 +245,9 @@
                 ],
                 "type": "web",
                 "image": "/screen-projects/FrameDashboard.webp",
+                "slides": [
+                    ""
+                ],
                 "technologies": [
                     "next",
                     "typescript",
@@ -193,6 +282,9 @@
                 ],
                 "type": "backend",
                 "image": "/screen-projects/FrameApi.webp",
+                "slides": [
+                    ""
+                ],
                 "technologies": [
                     "node",
                     "typescript",
@@ -216,7 +308,8 @@
                     "link": "https://github.com/AletzMan/technolife_api"
                 }
             }
-        ]
+        ],
+        "buttonClose": "Cerrar"
     },
     "experienceSection": [
         {
@@ -361,7 +454,7 @@
         "title": "Contáctame",
         "message": [
             "Si estás interesado en trabajar juntos o simplemente deseas obtener más información, no dudes en contactarme.",
-            "¡Espero con interés escuchar de ti pronto!"
+            "¡Espero tu mensaje!"
         ],
         "form": {
             "name": {
